--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -14,7 +14,7 @@
     <i class="material-icons" onclick="knapp()">menu</i>
 
         <header>
-            
+            <h3>JULBAKVERK
         </header>
         <main>
             <%= yield %>
@@ -22,9 +22,14 @@
         </main>
     </div>
     <nav> 
-    <i class="material-icons" onclick="knapp()">menu</i>
+        <i class="material-icons" onclick="knapp()">clear</i>
         <ul>
-            <li><h3>Bakverk</h3></li>
+            <li><h3 onclick="lista"()>Bakverk</h3>
+                <ul id="hej">
+                    <li>Pepparkakor</li>
+                    <li>Bullar</li>
+                </ul>
+            </li>
             <li><h3>Godis</h3></li>
             <li><h3>Vegan</h3></li>
         </ul>
