--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -24,9 +25,10 @@
     <nav> 
         <i class="material-icons" onclick="knapp()">clear</i>
         <ul>
+            <li><h3> <a href="/public/site/index.html">Hem</a> </h3></li>
             <li><h3 onclick="lista"()>Bakverk</h3>
                 <ul id="hej">
-                    <li>Pepparkakor</li>
+                    <li> <a href="/public/site/page1.html">Pepparkakor</a> </li>
                     <li>Bullar</li>
                 </ul>
             </li>
