--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,21 +1,21 @@
-<div class="stor"></div>
-            <div class="box1"></div>
-            <div class="box2"></div>
-            <div class="box3"></div>
-            <div class="box4"></div>
-            <div class="box5"></div>
-            <div class="box6"></div>
-            <div class="box7"></div>
-            <div class="box8"></div>
-            <div class="box9"></div>
-            <div class="box10"></div>
-            <div class="box11"></div>
-            <div class="box12"></div>
-            <div class="box13"></div>
-            <div class="box14"></div>
-            <div class="box15"></div>
-            <div class="box16"></div>
-            <div class="box17"></div>
-            <div class="box18"></div>
-            <div class="box19"></div>
-            <div class="box20"></div>
+<div class="stor"> <img src="/public/site/img/rocky-road.jpg"> </div>
+            <div class="box" id="1"></div>
+            <div class="box" id="2"></div>
+            <div class="box" id="3"></div>
+            <div class="box" id="4"></div>
+            <div class="box" id="5"></div>
+            <div class="box" id="6"></div>
+            <div class="box" id="7"></div>
+            <div class="box" id="8"></div>
+            <div class="box" id="9"></div>
+            <div class="box" id="10"></div>
+            <div class="box" id="11"></div>
+            <div class="box" id="12"></div>
+            <div class="box" id="13"></div>
+            <div class="box" id="14"></div>
+            <div class="box" id="15"></div>
+            <div class="box" id="16"></div>
+            <div class="box" id="17"></div>
+            <div class="box" id="18"></div>
+            <div class="box" id="19"></div>
+            <div class="box" id="20"></div>
