--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,21 +1,24 @@
-<div class="stor"> <img src="/public/site/img/rocky-road.jpg"> </div>
-            <div class="box" id="1"></div>
-            <div class="box" id="2"></div>
-            <div class="box" id="3"></div>
-            <div class="box" id="4"></div>
-            <div class="box" id="5"></div>
-            <div class="box" id="6"></div>
-            <div class="box" id="7"></div>
-            <div class="box" id="8"></div>
-            <div class="box" id="9"></div>
-            <div class="box" id="10"></div>
-            <div class="box" id="11"></div>
-            <div class="box" id="12"></div>
-            <div class="box" id="13"></div>
-            <div class="box" id="14"></div>
-            <div class="box" id="15"></div>
-            <div class="box" id="16"></div>
-            <div class="box" id="17"></div>
-            <div class="box" id="18"></div>
-            <div class="box" id="19"></div>
-            <div class="box" id="20"></div>
+
+<div class="första">
+        <div class="stor"><a href="/public/site/rockyroad.html"> <img src="/public/site/img/rocky-road.jpg"></a> </div>
+            <a href="/public/site/pepparkakor.html"><div class="box" id="box1"></div></a>
+            <div class="box">Ett klassiskt recept på goda pepparkakor. Baka pepparkakor tillsammans med någon så blir det extra trevligt!</div>
+            <a href="/public/site/knäck.html"><div class="box" id="box2"></div></a>
+            <div class="box">Klassisk knäck är ett måste till jul. </div>
+            <div class="box" id="box3"></div>
+            <div class="box"></div>
+            <div class="box" id="box4"></div>
+            <div class="box"></div>
+            <div class="box" id="box5"></div>
+            <div class="box"></div>
+            <div class="box" id="box6"></div>
+            <div class="box"></div>
+            <div class="box" id="box7"></div>
+            <div class="box"></div>
+            <div class="box" id="box8"></div>
+            <div class="box"></div>
+            <div class="box" id="box9"></div>
+            <div class="box"></div>
+            <div class="box" id="box10"></div>
+            <div class="box"></div>
+</div>
