--- a/site/layout.html.erb
+++ b/site/layout.html.erb
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
@@ -25,15 +26,21 @@
     <nav> 
         <i class="material-icons" onclick="knapp()">clear</i>
         <ul>
-            <li><h3> <a href="/public/site/index.html">Hem</a> </h3></li>
-            <li><h3 onclick="lista"()>Bakverk</h3>
+            <li id="nav"><h3> <a href="/public/site/index.html">Hem</a> </h3></li>
+            <li id="nav"><h3 onclick="lista"()>Bakverk</h3>
                 <ul id="hej">
-                    <li> <a href="/public/site/page1.html">Pepparkakor</a> </li>
-                    <li>Bullar</li>
+                    <li id="nav"> <a href="/public/site/pepparkakor.html">Pepparkakor</a> </li>
+                    <li id="nav">Bullar</li>
+                </ul>
+                </li>
+                <li id="nav"><h3>Godis</h3>
+                <ul id="hej">
+                    <li id="nav"> <a href="/public/site/knäck.html">Knäck</a> </li>
+                    <li id="nav">Bullar</li>
+                    <li id="nav"> <a href="/public/site/rockyroad.html">Rocky road</li>
                 </ul>
             </li>
-            <li><h3>Godis</h3></li>
-            <li><h3>Vegan</h3></li>
+            <li id="nav"><h3>Vegan</h3></li>
         </ul>
     </nav>
 <script src="/site/js/main.js"></script>
