--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,24 +1,22 @@
 
 <div class="första">
-        <div class="stor"><a href="/public/site/rockyroad.html"> <img src="/public/site/img/rocky-road.jpg"></a> </div>
+        <div class="stor" id="stor"><a href="/public/site/rockyroad.html"></a></div>
             <a href="/public/site/pepparkakor.html"><div class="box" id="box1"></div></a>
             <div class="box">Ett klassiskt recept på goda pepparkakor. Baka pepparkakor tillsammans med någon så blir det extra trevligt!</div>
             <a href="/public/site/knäck.html"><div class="box" id="box2"></div></a>
-            <div class="box">Klassisk knäck är ett måste till jul. </div>
-            <div class="box" id="box3"></div>
-            <div class="box"></div>
-            <div class="box" id="box4"></div>
-            <div class="box"></div>
-            <div class="box" id="box5"></div>
-            <div class="box"></div>
-            <div class="box" id="box6"></div>
-            <div class="box"></div>
-            <div class="box" id="box7"></div>
-            <div class="box"></div>
-            <div class="box" id="box8"></div>
-            <div class="box"></div>
-            <div class="box" id="box9"></div>
-            <div class="box"></div>
-            <div class="box" id="box10"></div>
-            <div class="box"></div>
+            <div class="box">Klassisk knäck är ett måste till jul. Låt socker, grädde och sirap koka ihop och använda gärna en kökstermometer för att avgöra när knäckens konsistens är perfekt. </div>
+            <a href="/public/site/lussekatt.html"><div class="box" id="box3"></div></a>
+            <div class="box">Lussekatter, lussebullar eller saffranskusar - kärt barn har många namn.</div>
+            <a href="/public/site/fudge.html"><div class="box" id="box7"></div></a>
+            <div class="box">Fudgen får den rätta konsistensen med mjölkchoklad i smeten och när den inte kokas till för hög temperatur.</div>
+            <a href="/public/site/mjukpepparkaka.html"><div class="box" id="box4"></div></a>
+            <div class="box">Ett fantastiskt recept på oemotståndlig mjuk pepparkaka perfekt att servera runt jul. Du gör kakan av bland annat mjöl, kanel, nejlikor, bikarbonat, smör och grädde.</div>
+            <a href="/public/site/mintkyssar.html"><div class="box" id="box8"></div></a>
+            <div class="box">Mumsigt recept på klassiska mintkyssar - godis som passar perfekt till jul. Du gör enkelt mintkyssarna av äggvita, pepparmintolja, florsocker och choklad.</div>
+            <a href="/public/site/cheesecake.html"><div class="box" id="box5"></div></a>
+            <div class="box">Godaste juldesserten gjord på saffransfärskost med syrlig apelsin och botten av digestivekex. Perfekt att göra dagen innan festen och förvara i frysen.</div>
+            <a href="/public/site/brändamandlar.html"><div class="box" id="box9"></div></a>
+            <div class="box">Ett klassiskt recept på brända mandlar som passar fint till både glöggen och som snacks i väntan på tomten. </div>
+            <a href="/public/site/kolasnittar.html"><div class="box" id="box6"></div></a>
+            <div class="box">Dessa kolasnittar med ingefära är sådär knapriga och härligt sega som vi vill ha dem. Att de är enkla att baka och rörs ihop på ett nafs gör ju inte saken sämre.</div>
 </div>
