--- a/site/index.html.erb
+++ b/site/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="första">
-        <div class="stor" id="stor"><a href="/public/site/rockyroad.html"></a></div>
+        <div class="stor" id="stor"><a href="/public/site/rockyroad.html"><div class=ruta></div></a> </div>
             <a href="/public/site/pepparkakor.html"><div class="box" id="box1"></div></a>
             <div class="box">Ett klassiskt recept på goda pepparkakor. Baka pepparkakor tillsammans med någon så blir det extra trevligt!</div>
             <a href="/public/site/knäck.html"><div class="box" id="box2"></div></a>
